crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__transform_tool_calls__tests__transform_tool_calls_with_model.snap
---
source: crates/forge_domain/src/transformer/transform_tool_calls.rs
expression: snapshot
---
transformation: "TransformToolCalls::with_model(gpt-4)"
before:
  messages:
    - id: "[id]"
      text:
        role: System
        content: System message
    - id: "[id]"
      text:
        role: Assistant
        content: "I'll help you"
        tool_calls:
          - name: test_tool
            call_id: call_123
            arguments:
              param: value
    - id: "[id]"
      tool:
        name: test_tool
        call_id: call_123
        output:
          is_error: false
          values:
            - text: Tool result text
after:
  messages:
    - id: "[id]"
      text:
        role: System
        content: System message
    - id: "[id]"
      text:
        role: Assistant
        content: "I'll help you"
    - id: "[id]"
      text:
        role: User
        content: Tool result text
        model: gpt-4
